# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@spulib//bazel:spu.bzl", "spu_cc_binary")

package(default_visibility = ["//visibility:public"])

spu_cc_binary(
    name = "sort",
    srcs = ["sort.cc"],
    deps = [
        "@com_google_absl//absl/strings",
        "@llvm-project//llvm:Support",
        "@spulib//examples/cpp:utils",
        "@spulib//libspu/device:io",
        "@spulib//libspu/kernel/hlo:basic_binary",
        "@spulib//libspu/kernel/hlo:basic_unary",
        "@spulib//libspu/kernel/hlo:const",
        "@spulib//libspu/kernel/hlo:geometrical",
        "@spulib//libspu/kernel/hlo:shuffle",
        "@yacl//yacl/link:factory",
    ],
)
