# Copyright 2024 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("//engine/bazel:scql.bzl", "scql_cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "arrow_reader",
    srcs = ["arrow_reader.cc"],
    hdrs = ["arrow_reader.h"],
    deps = [
        "//engine/core:arrow_helper",
        "@org_apache_arrow//:arrow",
    ],
)

cc_library(
    name = "arrow_writer",
    srcs = ["arrow_writer.cc"],
    hdrs = ["arrow_writer.h"],
    deps = [
        "//engine/core:arrow_helper",
        "//engine/core:type",
        "@org_apache_arrow//:arrow",
    ],
)

scql_cc_test(
    name = "reader_writer_test",
    srcs = ["reader_writer_test.cc"],
    deps = [
        ":arrow_reader",
        ":arrow_writer",
        "//engine/util:filepath_helper",
    ],
)

cc_binary(
    name = "read_write_bench",
    srcs = ["read_write_bench.cc"],
    deps = [
        "@google_benchmark//:benchmark_main",
    ] + [
        ":arrow_reader",
        ":arrow_writer",
        "//engine/util:filepath_helper",
        "@yacl//yacl/utils:parallel",
    ],
)
